# screen-ocr-watchdog

./: .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-windows.yml
app/: __main__.py  paths.py
app/capture/: mss_capturer.py
app/core/: image_pipeline.py  pipeline.py  pipeline_factory.py  scheduler.py
app/diff/: detector.py  image_detector.py  normalizer.py
app/notifier/: lark_image.py  lark_webhook.py
app/ocr/: engine.py  postprocess.py
app/storage/: config.py  history.py
app/ui/: history_view.py  region_picker.py  settings_window.py  tray.py  webhook_url_helpers.py
docs/superpowers/plans/: 2026-05-19-image-diff-mode.md  2026-05-20-go-rewrite.md  (+2 more)
internal/capture/: capture.go
internal/config/: config.go  config_test.go
internal/diff/: detector.go  detector_test.go
internal/history/: history.go  history_test.go
internal/notify/: lark.go  lark_test.go
internal/paths/: paths.go  paths_test.go
internal/picker/: picker.go
internal/pipeline/: pipeline.go  pipeline_test.go
internal/tray/: tray.go
internal/watcher/: watcher.go  watcher_test.go
tests/: test_detector.py  test_image_detector.py  test_image_pipeline.py  test_lark_image.py  test_normalizer.py  test_notifier.py  test_pipeline_factory.py  test_pipeline_replay.py  test_postprocess.py  test_settings_window.py  test_storage.py  test_webhook_url_helpers.py
tests/fixtures/: replay_basic.json
tools/: replay_runner.py
tools/fake_chat_page/: chat.js  index.html  messages.json  style.css
(+4 files in other folders)
